--- a/front-end/src/styles/default_layout.scss
+++ b/front-end/src/styles/default_layout.scss
@@ -3,3 +3,9 @@
 .default-layout {
     min-height: 100vh;
 }
+
+body[data-theme="dark"] {
+    .default-layout {
+        background-color: $black-color;
+    }
+}
