--- a/front-end/src/styles/switch_accounts_modal.scss
+++ b/front-end/src/styles/switch_accounts_modal.scss
@@ -18,6 +18,7 @@ $verified-icon-size: 23px;
                 .image-account {
                     height: $avatar-size;
                     width: $avatar-size;
+                    @include fit-image();
                 }
                 .nickname-account {
                     margin-left: 12px;
