--- a/front-end/src/styles/navbar.scss
+++ b/front-end/src/styles/navbar.scss
@@ -33,6 +33,8 @@ $margin-between-nav-link: 5px;
                 transition: 0.3s ease-in-out;
             }
             .navbar-logo {
+                width: 135px;
+                height: 28px;
                 opacity: 1;
             }
             .navbar-icon {
